--- a/samples/test-harness/config/cornell.ini
+++ b/samples/test-harness/config/cornell.ini
@@ -73,13 +73,14 @@ pt.antialiasing=1
 
 # ddgi volumes
 ddgi.volume.0.name=Cornell-Box
-ddgi.volume.0.probeRelocation.enabled=1
+ddgi.volume.0.probeRelocation.enabled=0 # ct:1
 ddgi.volume.0.probeRelocation.minFrontfaceDistance=0.1
-ddgi.volume.0.probeClassification.enabled=1
+ddgi.volume.0.probeClassification.enabled=0 # ct:1
 ddgi.volume.0.probeVariability.enabled=0
 ddgi.volume.0.probeVariability.threshold=0.03
-ddgi.volume.0.infiniteScrolling.enabled=1
-ddgi.volume.0.textures.rayData.format=5         # EDDGIVolumeTextureFormat::F32x2
+ddgi.volume.0.infiniteScrolling.enabled=0 # ct:1
+ddgi.volume.0.textures.rayData.format=6         # EDDGIVolumeTextureFormat::F32x2
+						# ct:5
 ddgi.volume.0.textures.irradiance.format=0      # EDDGIVolumeTextureFormat::U32
 ddgi.volume.0.textures.distance.format=2        # EDDGIVolumeTextureFormat::F16x2
 ddgi.volume.0.textures.data.format=3            # EDDGIVolumeTextureFormat::F16x4
@@ -87,7 +88,7 @@ ddgi.volume.0.textures.variability.format=1     # EDDGIVolumeTextureFormat::F16
 ddgi.volume.0.origin=0.0 1.0 0.0
 ddgi.volume.0.probeCounts=9 9 9
 ddgi.volume.0.probeSpacing=0.3 0.3 0.3
-ddgi.volume.0.probeNumRays=256
+ddgi.volume.0.probeNumRays=256			# ct:256
 ddgi.volume.0.probeNumIrradianceTexels=8
 ddgi.volume.0.probeNumDistanceTexels=16
 ddgi.volume.0.probeHysteresis=0.97
