--- a/samples/test-harness/config/cornell.ini
+++ b/samples/test-harness/config/cornell.ini
@@ -75,7 +75,7 @@ pt.antialiasing=1
 ddgi.volume.0.name=Cornell-Box
 ddgi.volume.0.probeRelocation.enabled=0 # ct:1
 ddgi.volume.0.probeRelocation.minFrontfaceDistance=0.1
-ddgi.volume.0.probeClassification.enabled=0 # ct:1
+ddgi.volume.0.probeClassification.enabled=1
 ddgi.volume.0.probeVariability.enabled=0
 ddgi.volume.0.probeVariability.threshold=0.03
 ddgi.volume.0.infiniteScrolling.enabled=0 # ct:1
