--- a/samples/test-harness/config/sponza.ini
+++ b/samples/test-harness/config/sponza.ini
@@ -56,10 +56,10 @@ pt.antialiasing=1
 
 # ddgi volumes
 ddgi.volume.0.name=Scene-Volume
-ddgi.volume.0.probeRelocation.enabled=0 # ct: 1
+ddgi.volume.0.probeRelocation.enabled=1
 ddgi.volume.0.probeRelocation.minFrontfaceDistance=0.3  # should be at least as large as probeViewBias!
-ddgi.volume.0.probeClassification.enabled=0 # ct: 1
-ddgi.volume.0.probeVariability.enabled=0 # ct: 1
+ddgi.volume.0.probeClassification.enabled=1
+ddgi.volume.0.probeVariability.enabled=1
 ddgi.volume.0.probeVariability.threshold=0.4
 ddgi.volume.0.infiniteScrolling.enabled=0
 ddgi.volume.0.textures.rayData.format=6         # EDDGIVolumeTextureFormat::F32x4
